# colorprint

./: README.md  colorprint.py  pyproject.toml  setup.py
colorprint/: README.txt  __init__.py  clrprint.py  colorprint.py
